--- a/apps/drec-angular-ui/src/app/nav/header/header.component.html
+++ b/apps/drec-angular-ui/src/app/nav/header/header.component.html
@@ -3,7 +3,7 @@
 
   <mat-toolbar-row>
     <!-- logo -->
-    <div class="py-2 me-3">
+    <div class="me-3">
       <svg xmlns="http://www.w3.org/2000/svg" class="py-1" width="100%" height="45" viewBox="0 0 151 48">
         <path
           d="M16.7,28.5V26.1a.58.58,0,0,0-.59-.58H13.7a.58.58,0,0,0-.57.58v2.4a.58.58,0,0,0,.58.58h2.41a.59.59,0,0,0,.58-.58"
@@ -100,7 +100,7 @@
           fill="#f2be1a"></path>
       </svg>
     </div>
-    <button mat-button> <mat-icon> menu</mat-icon></button>
+    <!-- <button mat-button> <mat-icon> menu</mat-icon></button> -->
 
 
     <!--  <span>HOME</span> -->
