--- a/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
@@ -185,7 +185,7 @@
                                             (click)="applyFilter()">filter</button>
                                     </div>
                                     <div class="">
-                                        <button class="btn-primary btn text-capitalize px-4"
+                                        <button class="btn-dark btn text-capitalize px-4"
                                             (click)="reset()">Reset</button>
                                     </div>
 
