--- a/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.scss
+++ b/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.scss
@@ -181,7 +181,8 @@
         border: #aaa solid 1px;
         border-radius: 4px;
         margin-bottom: 10px;
-      }  mat-progress-spinner {
+      } 
+       mat-progress-spinner {
         position: absolute;
         top: 50%;
         left: 50%;
