--- a/apps/drec-angular-ui/src/app/view/certified-devices-developer/certified-devices-developer.component.scss
+++ b/apps/drec-angular-ui/src/app/view/certified-devices-developer/certified-devices-developer.component.scss
@@ -9,11 +9,35 @@ mat-card-content{
     p{
       font-size: 13px;
     }
+
   }
-  
+  .body-bg{
+    padding: 35px 30px 35px 30px;
+      background: #f2f2f2;
+      mat-card-content{
+        padding: 10px;
+      }
+    }
   .column {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
     padding: 5px;
   }
+  .innermat-card{
+      
+    background: #ffffff;
+    box-shadow: 3px 0px 33px rgba(0, 0, 0, 0.1);
+  }
+  .mat-mdc-card{
+    padding: 20px;
+    box-shadow: 3px 0px 33px rgba(0, 0, 0, 0.1) !important;
+  }
+
+mat-progress-spinner{
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+z-index: 5;
+}
