--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -7,8 +7,8 @@
                 </h2>
             </div>
             <div>
-                <button class="btn btn-dark justify-content-end px-4" (click)="adddevice()">
-                    <mat-icon class="align-middle">add_circle</mat-icon> Add More Device
+                <button class="btn btn-dark justify-content-end  d-flex align-items-center px-4" (click)="adddevice()">
+                    <mat-icon class="align-middle me-2">add_circle</mat-icon> Add More Device
                 </button>
             </div>
 
@@ -255,19 +255,20 @@
                                 </div>
 
                                 <div class="example-container1 row" *ngIf="addmoredetals[i]">
-                                    <div class="col-md-3">
+                                    <div class="col-md-3 d-flex flex-column">
+                                        <span>Grid Inter-connection:</span>
                                         <mat-radio-group formControlName='gridInterconnection'>
-                                            <span>Grid Inter-connection:</span>
+                                            
 
                                             <mat-radio-button [value]=true>Yes</mat-radio-button>
                                             <mat-radio-button [value]=false>No</mat-radio-button>
                                         </mat-radio-group>
                                     </div>
-                                    <div class="col-md-3">
-
+                                    <div class="col-md-3 d-flex flex-column">
+                                        <span>Energy Storage:</span>
                                         <mat-radio-group formControlName='energyStorage'
                                             (ngModelChange)="showenergycapacity_input(i,$event)">
-                                            <span>Energy Storage:</span>
+                                            
 
                                             <mat-radio-button [value]=true>Yes</mat-radio-button>
                                             <mat-radio-button [value]=false>No</mat-radio-button>
@@ -291,7 +292,7 @@
                 </div>
             </mat-card-content>
             <mat-card-footer>
-                <div class="example-container row">
+                <div class="mt-3 mb-3 px-3 row">
                     <div class="col-12 d-flex justify-content-end">
                         <button type="submit" class="btn-primary btn text-capitalize px-4"
                             [disabled]="myform.invalid">submit</button>
