--- a/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
@@ -71,15 +71,17 @@
                     </mat-form-field>
                 </div>
 
+                <div class="d-flex align-items-center justify-content-end">
+                    <div class="me-3">
+                        <button class="btn-primary btn text-capitalize px-4"
+                            (click)="getPagedData()">filter</button>
+                    </div>
+                    <div class="">
+                        <button class="btn-dark btn text-capitalize px-4"
+                            (click)="reset()">Reset</button>
+                    </div>
+                </div>
                 
-                <div class="col-md-2">
-                    <button class="btn-primary btn text-capitalize px-4"
-                        (click)="getPagedData()">filter</button>
-                </div>
-                <div class="col-md-2">
-                    <button class="btn-primary btn text-capitalize px-4"
-                        (click)="reset()">Reset</button>
-                </div>
 
             </div>
         </form>
