--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -118,14 +118,14 @@
                                   </mat-error> -->
                                 </mat-form-field>
                             </div>
-                            <div class="col-md-6">
-
+                            <div class="col-md-6 d-flex flex-column">
+                                <span>Reservation Status:</span>
                                 <mat-radio-group formControlName='reservationActive'>
-                                    <span>Reservation Status:</span>
+                                  
 
                                     <mat-radio-button value="All">All</mat-radio-button>
-                                    <mat-radio-button value="Active">Active</mat-radio-button>
-                                    <mat-radio-button value="Deactive">Deactive</mat-radio-button>
+                                    <mat-radio-button value="Active"class="ms-2">Active</mat-radio-button>
+                                    <mat-radio-button value="Deactive" class="ms-2">Deactive</mat-radio-button>
                                 </mat-radio-group>
 
 
@@ -136,7 +136,7 @@
                                         (click)="DisplayList()">filter</button>
                                 </div>
                                 <div class="">
-                                    <button class="btn-primary btn text-capitalize px-4">Reset</button>
+                                    <button class="btn-dark btn text-capitalize px-4">Reset</button>
                                 </div>
 
 
@@ -156,101 +156,104 @@
                     <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input
                         class="filetr-desc pb-0 mb-0">
                 </mat-form-field> -->
+<div class="content mat-elevation-z8 d-flex flex-column">
+    <table mat-table [dataSource]="dataSource" matSort>
 
-            <table mat-table [dataSource]="dataSource" matSort>
+        <!-- Progress Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Name </th>
+            <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.name}} </td>
+        </ng-container>
 
-                <!-- Progress Column -->
-                <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Name </th>
-                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.name}} </td>
-                </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="aggregatedCapacity">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Aggregate
+                Capacity</th>
+            <td mat-cell *matCellDef="let row" class="table-data-myreservation">
+                {{row.aggregatedCapacity}} </td>
+        </ng-container>
 
-                <!-- Name Column -->
-                <ng-container matColumnDef="aggregatedCapacity">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Aggregate
-                        Capacity</th>
-                    <td mat-cell *matCellDef="let row" class="table-data-myreservation">
-                        {{row.aggregatedCapacity}} </td>
-                </ng-container>
+        <!-- Fruit Column -->
+        <ng-container matColumnDef="reservationActive">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                <td mat-cell *matCellDef="let row" ><span *ngIf="row.reservationActive">Active</span> <span *ngIf="!row.reservationActive">Deactive</span> </td>
+            </ng-container>
+        <!-- Progress Column -->
+        <!-- <ng-container matColumnDef="capacityRange">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
+                <td mat-cell *matCellDef="let row"> {{row.capacityRange}}% </td>
+            </ng-container> -->
 
-                <!-- Fruit Column -->
-                <ng-container matColumnDef="reservationActive">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                        <td mat-cell *matCellDef="let row" ><span *ngIf="row.reservationActive">Active</span> <span *ngIf="!row.reservationActive">Deactive</span> </td>
-                    </ng-container>
-                <!-- Progress Column -->
-                <!-- <ng-container matColumnDef="capacityRange">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
-                        <td mat-cell *matCellDef="let row"> {{row.capacityRange}}% </td>
-                    </ng-container> -->
+        <!-- Name Column -->
+        <ng-container matColumnDef="frequency">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate">Issuance
+                Frequency </th>
+            <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.frequency}} </td>
+        </ng-container>
 
-                <!-- Name Column -->
-                <ng-container matColumnDef="frequency">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate">Issuance
-                        Frequency </th>
-                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.frequency}} </td>
-                </ng-container>
-
-                <!-- Fruit Column -->
-                <ng-container matColumnDef="reservationStartDate">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Start </th>
-                    <td mat-cell *matCellDef="let row" class="table-data-myreservation">
-                        {{row.reservationStartDate| date:'EEE d MMM y'}} </td>
-                </ng-container>
-                <!-- Fruit Column -->
-                <ng-container matColumnDef="reservationEndDate">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> End </th>
-                    <td mat-cell *matCellDef="let row" class="table-data-myreservation">
-                        {{row.reservationEndDate| date:'EEE d MMM y'}} </td>
-                </ng-container>
-                <ng-container matColumnDef="targetVolumeInMegaWattHour">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Target </th>
-                    <td mat-cell *matCellDef="let row" class="table-data-myreservation">
-                        {{row.targetVolumeInMegaWattHour}} </td>
-                </ng-container>
-                <ng-container matColumnDef="SDGBenefits">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> SDGBenefits </th>
-                    <td mat-cell *matCellDef="let row"> {{row.SDGBenefits}} </td>
-                </ng-container>
-                <ng-container matColumnDef="number Of Devices">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Number Of
-                        Devices </th>
-                    <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.numberOfdevices}}
-                    </td>
-                </ng-container>
-                <ng-container matColumnDef="actions">
-                    <th mat-header-cell *matHeaderCellDef class="text-truncate">Action</th>
-                    <td mat-cell *matCellDef="let row; let i=index;" class="table-data-myreservation">
-                        <tr class="d-flex">
-                            <!-- <a class="btn-primary d-flex me-2 align-items-center btn-pad btn btn-sm"
-                                [routerLink]="['/certificate']" [queryParams]="{id: row.devicegroup_uid,name:row.name}"
-                                target="_blank"><mat-icon class="fs-6 mt-2" matTooltip="Certificate"  [matTooltipPosition]="'right'"
-                                aria-label="Button that displays a tooltip when focused or hovered over">visibility</mat-icon></a> -->
-                            <a matTooltip="Certificate" [matTooltipPosition]="'left'"
-                                aria-label="Button that displays a tooltip when focused or hovered over"
-                                (click)="DisplayCertificatepage(row)">
-                                <mat-icon class="fs-6 mt-2">card_membership</mat-icon></a>
-                            &nbsp;&nbsp;
-                            <a matTooltip="Devices" [matTooltipPosition]="'above'"
-                                aria-label="Button that displays a tooltip when focused or hovered over"
-                                (click)="DisplayDeviceList(row.deviceIds)"><mat-icon
-                                    class="fs-6 mt-2">devices</mat-icon> </a>
-                        </tr>
-                        <!-- <button>certificate</button> -->
-
-                        <!-- <button class="btn-primary btn btn-sm"  ><mat-icon>visibility</mat-icon> Devices</button> -->
-                    </td>
-                </ng-container>
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-                <!-- Row shown when there is no matching data. -->
-                <tr class="mat-row" *matNoDataRow>
-                    <!-- <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td> -->
+        <!-- Fruit Column -->
+        <ng-container matColumnDef="reservationStartDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Start </th>
+            <td mat-cell *matCellDef="let row" class="table-data-myreservation">
+                {{row.reservationStartDate| date:'EEE d MMM y'}} </td>
+        </ng-container>
+        <!-- Fruit Column -->
+        <ng-container matColumnDef="reservationEndDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> End </th>
+            <td mat-cell *matCellDef="let row" class="table-data-myreservation">
+                {{row.reservationEndDate| date:'EEE d MMM y'}} </td>
+        </ng-container>
+        <ng-container matColumnDef="targetVolumeInMegaWattHour">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Target </th>
+            <td mat-cell *matCellDef="let row" class="table-data-myreservation">
+                {{row.targetVolumeInMegaWattHour}} </td>
+        </ng-container>
+        <ng-container matColumnDef="SDGBenefits">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> SDGBenefits </th>
+            <td mat-cell *matCellDef="let row"> {{row.SDGBenefits}} </td>
+        </ng-container>
+        <ng-container matColumnDef="number Of Devices">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="text-truncate"> Number Of
+                Devices </th>
+            <td mat-cell *matCellDef="let row" class="table-data-myreservation"> {{row.numberOfdevices}}
+            </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef class="text-truncate">Action</th>
+            <td mat-cell *matCellDef="let row; let i=index;" class="table-data-myreservation">
+                <tr class="d-flex">
+                    <!-- <a class="btn-primary d-flex me-2 align-items-center btn-pad btn btn-sm"
+                        [routerLink]="['/certificate']" [queryParams]="{id: row.devicegroup_uid,name:row.name}"
+                        target="_blank"><mat-icon class="fs-6 mt-2" matTooltip="Certificate"  [matTooltipPosition]="'right'"
+                        aria-label="Button that displays a tooltip when focused or hovered over">visibility</mat-icon></a> -->
+                    <a matTooltip="Certificate" [matTooltipPosition]="'left'"
+                        aria-label="Button that displays a tooltip when focused or hovered over"
+                        (click)="DisplayCertificatepage(row)">
+                        <mat-icon class="fs-6 mt-2">card_membership</mat-icon></a>
+                    &nbsp;&nbsp;
+                    <a matTooltip="Devices" [matTooltipPosition]="'above'"
+                        aria-label="Button that displays a tooltip when focused or hovered over"
+                        (click)="DisplayDeviceList(row.deviceIds)"><mat-icon
+                            class="fs-6 mt-2">devices</mat-icon> </a>
                 </tr>
-            </table>
+                <!-- <button>certificate</button> -->
 
-            <mat-paginator [pageSize]="pageSize" aria-label="Select page of users"></mat-paginator>
+                <!-- <button class="btn-primary btn btn-sm"  ><mat-icon>visibility</mat-icon> Devices</button> -->
+            </td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+        <!-- Row shown when there is no matching data. -->
+        <tr class="mat-row" *matNoDataRow>
+            <!-- <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td> -->
+        </tr>
+    </table>
+    <mat-paginator [pageSize]="pageSize" aria-label="Select page of users"></mat-paginator>
+
+</div>
+         
+
             <!-- </div> -->
             <mat-card-footer></mat-card-footer>
         </mat-card-content>
