--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.scss
@@ -4,6 +4,7 @@ $secondary: #010101;
 {
     padding: 35px 30px 35px 30px;
     background: #f2f2f2;
+    z-index: 0;
     .mat-mdc-card
     {
         box-shadow: 3px 0px 33px rgba(0,0,0,0.1)!important;
@@ -17,9 +18,6 @@ $secondary: #010101;
     right: 10px;
     width: fit-content;
     // margin-top: -50px !important;
-    .filetr-desc{
-       
-    }
 }
 .mat-body-cont{
     padding: 0px 16px 23px !important;
@@ -57,6 +55,31 @@ $secondary: #010101;
   .table-data-myreservation{
     font-size: 12px;
   }
+  // this is for table 
+  .mat-elevation-z8{
+    min-width: 100% !important;
+    overflow: scroll;
+    mat-paginator{
+      display: initial !important;
+    }
+  }
+  mat-progress-spinner{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+  }
+  .bg-warning
+  {
+    position: fixed;
+    width: 100vw;
+    left: 0;
+    right: 0;
+    height: 100vh;
+    background: rgba(0,0,0,0.2) !important;
+    z-index: 1;
+}
   // table {
   //   font-family: arial, sans-serif;
   //   border-collapse: collapse;
