--- a/apps/drec-angular-ui/src/styles.scss
+++ b/apps/drec-angular-ui/src/styles.scss
@@ -12,8 +12,18 @@ h4,
 h5,
 h6,
 p {
-    font-family: 'Montserrat', sans-serif !important;
+    font-family: 'Poppins', sans-serif !important;
 }
+.mat-typography,
+.mat-button,
+.mat-input-element,
+.mat-select,
+.mat-checkbox-label,
+.mat-radio-label,
+.mat-table {
+    font-family: 'Poppins', sans-serif !important;
+}
+
 
 // Variables
 // Colors
@@ -34,6 +44,7 @@ $f-16: 16px;
 html,
 body {
     height: 100%;
+    font-family: 'Poppins', sans-serif !important;
 }
 
 // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
@@ -335,4 +346,11 @@ border-left-color:$primary!important ;
 }
 .mat-mdc-dialog-surface.mdc-dialog__surface::-webkit-scrollbar{
     display: none !important;
+}
+
+// this is for all-device component table heading left 
+.alldevice-component{
+    .mat-sort-header-content{
+        text-align: left;
+    }
 }
