--- a/apps/drec-angular-ui/src/app/view/device/edit-device/edit-device.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/edit-device/edit-device.component.html
@@ -38,12 +38,12 @@
                                     <mat-label class="text-capitalize">Current External ID</mat-label>
                                     <input matInput [value]="externalId" readonly>
                                   
-                                        <mat-icon matSuffix (click)="editExternalid()"
+                                        <mat-icon class="edit-icon" matSuffix (click)="editExternalid()"
                                             *ngIf="!showcancelicon" style="cursor: pointer;"  matTooltip="Yes"
                                             matTooltipPosition="above">edit</mat-icon>
                                         <mat-icon matSuffix (click)="hideeditExternalid()"
                                             *ngIf="showcancelicon" style="cursor: pointer;"  matTooltip="No"
-                                            matTooltipPosition="above">cancel</mat-icon>
+                                            matTooltipPosition="above" >cancel</mat-icon>
                                   
 
                                     <!-- <mat-hint>Hint</mat-hint> -->
@@ -208,13 +208,13 @@
 
                             <div class="col-md-3">
                                 <button
-                                    class="btn py-2 pb-3 fw-bold btn-outline-primary d-block w-100 text-capitalize align-middle cursor-pointer"
+                                    class="btn py-2 pb-3 fw-bold btn-outline-danger d-block w-100 text-capitalize align-middle cursor-pointer"
                                     (click)="addmore()" *ngIf="showaddmore">
                                     Add more details <mat-icon class="pt-2 scroll-down">keyboard_arrow_down</mat-icon>
                                 </button>
 
                                 <button
-                                    class="btn py-2 pb-3 fw-bold btn-outline-danger d-block w-100 text-capitalize align-middle cursor-pointer"
+                                    class="btn py-2 pb-3 fw-bold btn-outline-dark d-block w-100 text-capitalize align-middle cursor-pointer"
                                     (click)="nomore()" *ngIf="shownomore">
                                     hide details <mat-icon class="pt-2 scroll-down">keyboard_arrow_up</mat-icon>
                                 </button>
@@ -312,7 +312,7 @@
                 </mat-card>
                 <!-- </div> -->
                 <mat-card-footer>
-                    <div class="example-container row">
+                    <div class="example-container mt-3 row">
                         <div class="col-12 d-flex justify-content-end">
                             <button type="submit" class="btn-primary btn text-capitalize px-4">submit</button>
                         </div>
