--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.scss
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.scss
@@ -119,7 +119,7 @@ mat-nav-list {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  font-size: 1rem;
+  // font-size: 1rem;
   margin-bottom: 6px;
   padding: 0 13px 0px 7px;
 
