--- a/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-bulk-device/add-bulk-device.component.html
@@ -1,4 +1,4 @@
-<div class="body-bg">
+<div class="body-bg bulk-upload-device">
   <mat-card *ngIf="!showdevicesinfo">
     <mat-card-header class="d-flex justify-content-between mat-crd-hide align-items-center">
 
