add pipe function for timezone and update in read ui

--- a/apps/drec-angular-ui/src/app/view/meter-read/addread/addread.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/addread/addread.component.html
@@ -11,7 +11,7 @@
 
         </mat-card-header>
         <hr class="mb-0 pb-0">
-<!-- 
+        <!-- 
         <mat-card-content>
            
                 <div class="d-flex">
@@ -51,19 +51,19 @@
                                 </mat-option>
                             </mat-autocomplete>
                         </mat-form-field> -->
-                        <mat-form-field  appearance="outline">
+                        <mat-form-field appearance="outline">
                             <mat-label class="text-capitalize">Select Timezone</mat-label>
-                            <input type="text" placeholder="Please Enter Timezone" aria-label="text"
-                                matInput formControlName="timezone" [matAutocomplete]="auto" >
+                            <input type="text" placeholder="Please Enter Timezone" aria-label="text" matInput
+                                formControlName="timezone" [matAutocomplete]="auto">
                             <mat-autocomplete #auto="matAutocomplete">
                                 <mat-option *ngFor="let code of filteredOptions | async" [value]="code.name">
                                     {{code.name}}
                                 </mat-option>
-                               
+
                             </mat-autocomplete>
-                            <mat-error *ngIf="showerror"> no Timezone avalable</mat-error>
+                           
                         </mat-form-field>
-                       
+                        <mat-error *ngIf="showerror"> Invalid timezone Selected </mat-error>
                     </div>
                     <div class="col-md-3">
 
