--- a/apps/drec-angular-ui/src/app/view/meter-read/meter-read-table/meter-read-table.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/meter-read-table/meter-read-table.component.html
@@ -8,11 +8,13 @@
       
         <ng-container matColumnDef="startdate">
             <th mat-header-cell *matHeaderCellDef> Start Datetime </th>
-            <td mat-cell *matCellDef="let element"> {{element.startdate|date:'long'}} </td>
+            <td mat-cell *matCellDef="let element"> {{ element.startdate | timezone:'YYYY-MM-DD HH:mm:ss': device_timezone }}
+                </td>
         </ng-container>
         <ng-container matColumnDef="enddate">
             <th mat-header-cell *matHeaderCellDef>End Datetime </th>
-            <td mat-cell *matCellDef="let element"> {{element.enddate|date:'long'}} </td>
+            <td mat-cell *matCellDef="let element"> {{ element.enddate | timezone:'YYYY-MM-DD HH:mm:ss':device_timezone }}
+                 </td>
         </ng-container>
         <ng-container matColumnDef="value">
             <th mat-header-cell *matHeaderCellDef> Value(Wh) </th>
