--- a/apps/drec-angular-ui/src/app/view/meter-read/meter-read-table/meter-read-table.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/meter-read-table/meter-read-table.component.html
@@ -3,17 +3,18 @@
     <h2 style="text-align: center;color:#f2be1a; font-size: 16px;" class="text-capitalize mt-0 pt-0 mb-0 pb-0">
         <b>{{data.devicename}}</b></h2>
 </div>
-<div class="content mat-elevation-z8 text-center" *ngIf="!loading">
+<!-- <mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading"></mat-progress-spinner> -->
+<div class="content mat-elevation-z8 text-center" *ngIf="filter">
     <table mat-table [dataSource]="dataSource">
       
         <ng-container matColumnDef="startdate">
             <th mat-header-cell *matHeaderCellDef> Start Datetime </th>
-            <td mat-cell *matCellDef="let element"> {{ element.startdate | timezone:'YYYY-MM-DD HH:mm:ss': device_timezone }}
+            <td mat-cell *matCellDef="let element"> {{ element.startdate | timezone: device_timezone:'YYYY-MM-DD HH:mm:ss'|date:'long'}}
                 </td>
         </ng-container>
         <ng-container matColumnDef="enddate">
             <th mat-header-cell *matHeaderCellDef>End Datetime </th>
-            <td mat-cell *matCellDef="let element"> {{ element.enddate | timezone:'YYYY-MM-DD HH:mm:ss':device_timezone }}
+            <td mat-cell *matCellDef="let element"> {{ element.enddate | timezone:device_timezone:'YYYY-MM-DD HH:mm:ss' |date:'long'}}
                  </td>
         </ng-container>
         <ng-container matColumnDef="value">
