--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -428,13 +428,13 @@
 									<ng-container matColumnDef="certificate_issuance_startdate">
 										<th mat-header-cell *matHeaderCellDef>StartDate </th>
 										<td mat-cell *matCellDef="let element" class="table-data">
-											{{element.certificate_issuance_startdate|date:'long'}}</td>
+											{{element.certificate_issuance_startdate|timezone: element.timezone:'YYYY-MM-DD HH:mm:ss'|date:'long'}}</td>
 									</ng-container>
 
 									<ng-container matColumnDef="certificate_issuance_enddate">
 										<th mat-header-cell *matHeaderCellDef> EndDate</th>
 										<td mat-cell *matCellDef="let element" class="table-data">
-											{{element.certificate_issuance_enddate|date:'long'}}</td>
+											{{element.certificate_issuance_enddate| timezone: element.timezone:'YYYY-MM-DD HH:mm:ss'|date:'long'}}</td>
 									</ng-container>
 
 									<ng-container matColumnDef="externalId">
