fixed issue in buyer make reservation read not show

--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -90,7 +90,7 @@
         <mat-icon>add_circle</mat-icon>
         <span>Add Reservation</span>
       </button>
-      <button mat-button class="menu-button" routerLinkActive="active" *ngIf="loginuser.role ==='Buyer'">
+      <button mat-button class="menu-button" routerLinkActive="active" *ngIf="loginuser.role ==='Buyer'&&!showmenu">
         <mat-icon>account_circle</mat-icon>
         <span>Account</span>
       </button>
