--- a/apps/drec-angular-ui/src/app/view/register/register.component.html
+++ b/apps/drec-angular-ui/src/app/view/register/register.component.html
@@ -190,7 +190,7 @@
                     </form>
 
                 </mat-step>
-                <mat-step label="passwoed" state="chat">
+                <mat-step label="Password" >
                     <form [formGroup]="registerForm">
                         <ng-template matStepLabel></ng-template>
 
